argocd/base/nginx-deployment.yaml
# nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: karoly-boss-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: registry.k8s.io/nginx-slim:0.8
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: www-mount
              mountPath: /usr/share/nginx/html
      volumes:
        - name: www-mount
          persistentVolumeClaim:
            claimName: nginx-pvc
