argocd/base/petclinic-deployment.yaml
# Petclinic deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: petclinic-namespace
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        - image: lscr.io/linuxserver/mariadb:latest
          name: spring-petclinic-mysql-01
          volumeMounts:
            - mountPath: /config/initdb.d/user.sql
              name: user-sql-mount
              readOnly: true
              subPath: user.sql
            - mountPath: /var/lib/mysql
              name: mysql-data-mount
          workingDir: /
        - image: docker.io/nemgyuri/petclinic-test:v1.0
          name: spring-petclinic-app-01
          workingDir: /
      restartPolicy: Always
      volumes:
        - name: user-sql-mount
          configMap:
            name: petclinic-configmap
        - name: mysql-data-mount
          persistentVolumeClaim:
            claimName: petclinic-pvc
