argocd/base/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  namespace: haproxy-namespace
spec:
  type: ClusterIP
  selector:
    app: haproxy
  ports:
    - port: 8080
      targetPort: 9090
