argocd/base/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic-namespace
spec:
  type: ClusterIP
  selector:
    app: spring-petclinic
  ports:
    - port: 8080
      targetPort: 8080
