argocd/base/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: haproxy-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /haproxy-test
            pathType: Prefix
            backend:
              service:
                name: haproxy-service
                port:
                  number: 8080
